<resources>
    <string name="app_name">Price Checker</string>
    <string name="total_label">Total:</string>
    <string name="total_price_format">%1$d items, $%2$.2f</string>
    <string name="name_label">Name:</string>
    <string name="price_label">Price:</string>
    <string name="thumbnail_label">Thumbnail url:</string>
    <string name="qr_image_label">Qr code image url:</string>
    <string name="qr_code_description">Scan this qr code image</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="no_items_description">No items. Please add items.</string>
</resources>